--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <link rel="stylesheet" href="style.css">
+        <title>Cleanly Books</title>
 </head>
 <body>
-    
+<div class ="navigationBar" id = "nav1">
+    <img src = "docs\images\Logo-facebook.png">
+</div>   
+<div class = "quickAbout" id = "aboutFirst">
+    asdlfajsdlfkjasldkfj
+</div>   
 </body>
 </html>
