need to make a non main branch lol

--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
         <title>Cleanly Books</title>
 </head>
 <body>
-<div class ="navigationBar" id = "nav1">
+<div class = navigationBar id = "nav1">
     <img src = "docs\images\Logo-facebook.png">
 </div>   
-<div class = "quickAbout" id = "aboutFirst">
-    asdlfajsdlfkjasldkfj
+<div id = "aboutFirst">
+   <p>asdfasdfasdf</p>
+   <p>asdfasdfasdf</p>
+   <p>asdfasdfasdf</p>
+   <p>asdfasdfasdf</p>
+   <p>asdfasdfasdf</p>
+   <p>asdfasdfasdf</p>
+   <p>asdfasdfasdf</p>
+   
+
 </div>   
 </body>
 </html>
