working on branch dev

--- a/index.html
+++ b/index.html
@@ -8,18 +8,34 @@
 </head>
 <body>
 <div class = navigationBar id = "nav1">
-    <img src = "docs\images\Logo-facebook.png">
+    <img src = "docs\images\Small logo.png">
+    <a href="mailto:chava@cleanlybooks.com">Click here to email us</a>
 </div>   
-<div id = "aboutFirst">
-   <p>asdfasdfasdf</p>
-   <p>asdfasdfasdf</p>
-   <p>asdfasdfasdf</p>
-   <p>asdfasdfasdf</p>
-   <p>asdfasdfasdf</p>
-   <p>asdfasdfasdf</p>
-   <p>asdfasdfasdf</p>
-   
-
-</div>   
+<div class = "homeBlocks" id = "homeFirst">
+   <p><h1>What services do we provide?</h1></p>
+    <p>General Bookkeeping</p>
+   <p>Accounts Receivable/Payable</p>
+   <p>Financial Reporting</p>
+   <p>Payroll Services</p>
+   <p>Tax Preparation</p>
+</div>  
+<div class = "homeBlocks" id = "homeSecond">
+    <p><h1>I need 5 drop down questions here</h1></p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+ </div>   
+ <div class = "homeBlocks" id = "homeThird">
+    <p>I need client quotes here</p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+    <p>asdfasdfasdf</p>
+ </div>   
 </body>
 </html>
