--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <a href="mailto:chava@cleanlybooks.com">Click here to email us</a>
 </div>   
 <div class = "homeBlocks" id = "homeFirst">
-   <p><h1>What services do we provide?</h1></p>
-    <p>General Bookkeeping</p>
-   <p>Accounts Receivable/Payable</p>
-   <p>Financial Reporting</p>
-   <p>Payroll Services</p>
-   <p>Tax Preparation</p>
+    <p><h1>What services do we provide?</h1></p>
+    <div class = "services" id = "serviceOne">General Bookkeeping</div>
+    <div class = "services" id = "serviceTwo">Accounts Receivable/Payable</div>
+    <div class = "services" id = "serviceThree">Financial Reporting</div>
+    <div class = "services" id = "serviceFour">Payroll Services</div>
+    <div class = "services" id = "serviceFive">Tax Preparation</div>
 </div>  
 <div class = "homeBlocks" id = "homeSecond">
     <p><h1>I need 5 drop down questions here</h1></p>
@@ -27,8 +27,8 @@
     <p>asdfasdfasdf</p>
     <p>asdfasdfasdf</p>
     <p>asdfasdfasdf</p>
- </div>   
- <div class = "homeBlocks" id = "homeThird">
+</div>   
+<div class = "homeBlocks" id = "homeThird">
     <p>I need client quotes here</p>
     <p>asdfasdfasdf</p>
     <p>asdfasdfasdf</p>
@@ -36,6 +36,6 @@
     <p>asdfasdfasdf</p>
     <p>asdfasdfasdf</p>
     <p>asdfasdfasdf</p>
- </div>   
+</div>   
 </body>
 </html>
