latest update, commiting to not lose

--- a/about.html
+++ b/about.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Who we are</title>
 </head>
 <body>
-    
+<div class = navigationBar id = "nav1">
+    <img src = "docs\images\Small logo.png">
+    <a href="mailto:chava@cleanlybooks.com">
+        <div id = "email">Click here to email us</div>
+    </a>
+    <a href="about.html">
+        <div class="links" id="about">About</div>
+    </a>
+    <a href="contact.html">
+        <div class="links" id="contact">Contact</div>
+    </a>
+    <a href="index.html">
+        <div class="links" id="contact">Home</div>
+    </a>
+</div>   
+<div class = "aboutWords" id = "firstWords"><h1>Chava Shawn has been working with entrepreneurs for decades</h1></div>
+<div class="aboutPic" id="firstPic">
+    <img src="docs/images/Chavapic.jpg" alt="Chava's Picture">
+</div>
+
 </body>
 </html>
