--- a/index2.html
+++ b/index2.html
@@ -8,26 +8,21 @@
         <title>Cleanly Books</title>
 </head>
 <body>
-    <header>
-        <div class="navbar">
-            <div class="logo">
-                <img src="docs/images/Small logo.png" alt="Cleanly Books Logo">
-            </div>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="mailto:chava@cleanlybooks.com">Email Us</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="index.html">Home</a></li>
-                </ul>
-                <div class="hamburger">
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                </div>
-            </nav>
-        </div>
-    </header>
+<div class = navigationBar id = "nav1">
+    <img src = "docs\images\Small logo.png">
+    <a href="mailto:chava@cleanlybooks.com">
+        <div id = "email">Click here to email us</div>
+    </a>
+    <a href="about.html">
+        <div class="links" id="about">About</div>
+    </a>
+    <a href="contact.html">
+        <div class="links" id="contact">Contact</div>
+    </a>
+    <a href="index.html">
+        <div class="links" id="contact">Home</div>
+    </a>
+</div>   
 
 <div class = "HomeBlocks" id = "firstHead"><h1>Services Provided</h1></div>
 <div class = "homeBlocks" id = "homeFirst">
