--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 <body>
     <header>
-        <img src="docs\images\Small logo.png" alt="Cleanly Books Banner" class="banner">
+        <img src="docs\images\Cleanly Books.png" alt="Cleanly Books Banner" class="banner">
     </header>
     <div class="container">
         <img src="docs/images/pexels-olly-3823488.jpg" alt="Pexels Image" class="top-image">
